# tver-dl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  SETUP.md  config.json  config.yaml  docker-compose.yml  downloaded.json  entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  test_tver_downloader.py  tver_downloader.py  vite.config.ts
.claude/commands/: commit.md  optimize.md
.github/workflows/: docker.yml  release.yml
ansible/: README.md  ansible.cfg  hosts  site.yml
ansible/roles/copy_files/defaults/: main.yml
ansible/roles/copy_files/tasks/: main.yml  sync_dir.yml
ansible/roles/copy_files/vars/: main.yml
docs/: architecture.md  configuration.md  contributing.md  database.md  deployment.md
python/: config.json  pyproject.toml  tver_downloader.py
python/tver_dl/: config.py
scripts/: get_episodes.py
sql/: downloads_table.sql  episodes_table.sql  rls_rules.sql  series_table.sql  subtitles_table.sql  table_alterations.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: tver_downloader.py
src-tauri/src/: main.rs
tests/: test_database_tracker.py  test_filter.py  test_tracker.py  test_tver_api.py
tver_dl/: __init__.py  _version.py  cli.py  config.py  core.py  display.py  filter.py  history.py  tracker.py  tver_api.py  utils.py  vpn.py  ytdlp.py
