[project]
name = "tver-downloader"
version = "0.1.0"
description = "Automatically download new episodes from TVer using yt-dlp"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.scripts]
tver-dl = "tver_downloader:main"

[tool.hatch.build.targets.wheel]
only-include = ["tver_downloader.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
