[project]
name = "tver-downloader"
dynamic = ["version"]
description = "Automatically download new episodes from TVer using yt-dlp"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3"
]

[tool.ruff]
line-length = 100
exclude = ["__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I"]
ignore = [
    # Ignore any specific rule codes
]

[project.scripts]
tver-dl = "tver_dl.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "tver_dl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["tver_dl"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0",
]
