[package]
name = "tver-downloader"
version = "0.1.0"
description = "TVer Episode Downloader"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "http-all", "path-all", "shell-execute", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
